# bloomfilter-bsd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  LICENSE_APACHE.txt  LICENSE_BSD.txt  adept.hpp  bitmask.hpp  bitpack.hpp  bits.hpp  bitset.hpp  bitset_util.hpp  bloomfilter.hpp  bloomfilter2.hpp  bloomfilter2_vec.hpp  bloomfilter_runtime.hpp  bloomfilter_runtime_types.hpp  bloomfilter_vec.hpp  dict.hpp  div.hpp  dtl.hpp  env.hpp  hash.hpp  index.hpp  main.cpp  math.hpp  mem.hpp  polyfill.hpp  psma.hpp  simd.hpp  sma.hpp  storage.hpp  thread.hpp  tree.hpp  tree_mask.hpp  vec.hpp  zone_mask.hpp
amsfilter/: CMakeLists.txt
amsfilter/cmake/Modules/: FindCUB.cmake  FindCUDAAPIWrappers.cmake  FindReadline.cmake
amsfilter/src/amsfilter/: amsfilter.cpp  amsfilter.hpp  amsfilter_lite.hpp  bitmap_view.hpp  common.cpp  common.hpp  config.cpp  config.hpp  config_valid.cpp  config_valid.hpp  probe.cpp  probe.hpp  probe_lite.hpp  tuning_params.hpp
amsfilter/src/amsfilter/cuda/: probe.cu  probe.hpp  probe_lite.hpp
amsfilter/src/amsfilter/cuda/internal/: alloc.hpp  block_gather.cuh  cuda_api_helper.hpp  cuda_helper.cuh  kernel.cuh  probe_impl.cuh  replicas.hpp
amsfilter/src/amsfilter/cuda/internal/kernel_instances/: kernel_extern_templates.cuh  kernel_w1.cu  kernel_w16.cu  kernel_w16.cuh  kernel_w2.cu  kernel_w2.cuh  kernel_w32.cu  kernel_w4.cu  kernel_w8.cu  kernel_w8.cuh  macro.inc
amsfilter/src/amsfilter/internal/: blocked_bloomfilter_resolve.hpp  blocked_bloomfilter_template.hpp  buffer.hpp  cuckoofilter_resolve.hpp  cuckoofilter_template.hpp  filter_resolve.hpp  filter_template.hpp  probe_impl.hpp
amsfilter/src/amsfilter/internal/probe_instances/: README.md  macro.inc  probe_extern_templates.hpp  probe_w1.cpp  probe_w1.hpp  probe_w16.cpp  probe_w2.cpp  probe_w2.hpp  probe_w32.cpp  probe_w32.hpp  probe_w4.cpp  probe_w4.hpp  probe_w8.cpp
amsfilter/src/amsfilter_model/: execution_env.hpp  fpr.cpp  fpr.hpp  fpr_lut.hpp  model.cpp  model.hpp
amsfilter/src/amsfilter_model/internal/: benchmark.hpp  benchmark_cpu.cpp  benchmark_cpu.hpp  benchmark_gpu.cu  benchmark_gpu.cuh  benchmark_pci_bw.cu  benchmark_pci_bw.cuh  common.hpp  cost_fn.hpp  perf_db.cpp  perf_db.hpp  platform.cpp  platform.hpp  skyline.cpp  skyline.hpp  skyline_entry.hpp  timing.hpp  tune.cpp  tune.hpp  udf.hpp  util.hpp
amsfilter/src/amsfilter_model/tool/: calibration.cpp  gen_fpr_lut.cpp  shell.cpp
bloomfilter/: block_addressing_logic.hpp  blocked_bloomfilter.hpp  blocked_bloomfilter_b64.hpp  blocked_bloomfilter_batch_dispatch.hpp  blocked_bloomfilter_block_logic.hpp  blocked_bloomfilter_block_logic_sgew.hpp  blocked_bloomfilter_block_logic_sltw.hpp  blocked_bloomfilter_block_logic_zoned.hpp  blocked_bloomfilter_config.hpp  blocked_bloomfilter_logic.hpp  blocked_bloomfilter_runtime.hpp  blocked_bloomfilter_tune.hpp  blocked_bloomfilter_tune_impl.hpp  blocked_cuckoofilter.hpp  blocked_cuckoofilter_block_logic.hpp  blocked_cuckoofilter_logic.hpp  blocked_cuckoofilter_multiword_table.hpp  blocked_cuckoofilter_simd.hpp  bloom_filter_std.hpp  bloomfilter.hpp  bloomfilter2.hpp  bloomfilter2_vec.hpp  bloomfilter_addressing_logic.hpp  bloomfilter_block_logic.hpp  bloomfilter_h1.hpp  bloomfilter_h1_logic.hpp  bloomfilter_h1_mod.hpp  bloomfilter_h1_mod_vec.hpp  bloomfilter_h1_vec.hpp  bloomfilter_h2.hpp  bloomfilter_h2_logic.hpp  bloomfilter_h2_mod.hpp  bloomfilter_h2_mod_vec.hpp  bloomfilter_h2_vec.hpp  bloomfilter_h3.hpp  bloomfilter_h3_mod.hpp  bloomfilter_h3_mod_vec.hpp  bloomfilter_h3_vec.hpp  bloomfilter_hn_vec.hpp  bloomfilter_logic.hpp  (+17 more)
bloomfilter/dynamic/: block_addressing_logic.hpp  blocked_bloomfilter.hpp  blocked_bloomfilter_block_logic.hpp  blocked_bloomfilter_logic.hpp  bloomfilter_addressing_logic.hpp  bloomfilter_block_logic.hpp  bloomfilter_logic.hpp  hash.hpp
cmake/: FindNuma.cmake
filter/: blocked_bloomfilter_block_logic_sgew.hpp  blocked_bloomfilter_block_logic_sltw.hpp  blocked_bloomfilter_logic.hpp  blocked_bloomfilter_tune.hpp  blocked_cuckoofilter.hpp  blocked_cuckoofilter_block_logic.hpp  blocked_cuckoofilter_logic.hpp  blocked_cuckoofilter_multiword_table.hpp  math.hpp  zoned_blocked_bloomfilter.hpp  zoned_blocked_bloomfilter_tune_impl.hpp
filter/blocked_bloomfilter/: blocked_bloomfilter.hpp  blocked_bloomfilter_config.hpp  fpr.hpp  hash_family.hpp  math.hpp  vector_helper.hpp
filter/blocked_cuckoofilter/: README.md  blocked_cuckoofilter.hpp  blocked_cuckoofilter_logic.hpp  blocked_cuckoofilter_multiword_table.hpp  blocked_cuckoofilter_word_table.hpp
filter/cuckoofilter/: bitsutil.hpp  cuckoofilter.hpp  cuckoofilter_config.hpp  cuckoofilter_logic.hpp  cuckoofilter_table.hpp  cuckoofilter_table_scalar.hpp  cuckoofilter_table_scalar_cuda.hpp  cuckoofilter_table_simd.hpp  cuckoofilter_table_simd_avx2.hpp  cuckoofilter_table_simd_avx512f.hpp  cuckoofilter_tune.hpp  cuckoofilter_tune_impl.hpp
filter/dynamic/: blocked_bloomfilter.hpp
filter/dynamic_blocked_bloomfilter/: README.md
filter/model/: calibration_data_test.cpp
old/: bitmask.hpp
simd/: CMakeLists.txt  bitset.hpp  bitset_hack.hpp  extensions.hpp  intrin_avx2.hpp  intrin_avx512.hpp  intrin_sse.hpp  intrin_x64.hpp  intrinsics.hpp  types.hpp  vec.hpp  vec_readme.md
src/dtl/: adept.hpp  bits.hpp  bitset.hpp  bitset_util.hpp  color.hpp  div.hpp  dtl.hpp  env.hpp  math.hpp  mem.hpp  simd.hpp  thread.hpp  tree.hpp  type_traits.hpp
src/dtl/filter/: README.md  bbf_32.cpp  bbf_32.hpp  bbf_64.cpp  bbf_64.hpp  bcf.cpp  bcf.hpp  cf.cpp  cf.hpp  cf2.cpp  cf2.hpp  filter.hpp  filter_base.hpp  filter_test.cpp  platform.cpp  platform.hpp  platform_test.cpp  zbbf_32.cpp  zbbf_32.hpp  zbbf_64.cpp  zbbf_64.hpp
storage/: CMakeLists.txt  column.hpp  scan.hpp  types.hpp
test/: CMakeLists.txt  bitmask_experiments.cpp  bitmask_test.cpp  bitpack_test.cpp  bitset_test.cpp  bloomfilter_blocked_cacheline_test.cpp  bloomfilter_experiments.cpp  bloomfilter_rts_experiments.cpp  bloomfilter_test.cpp  cuckoofilter_test.cpp  div_test.cpp  enumerate_groups_test.cpp  helper.h  knl_experiments.cpp  mem_test.cpp  vec_test.cpp
(+121 files in other folders)
